/***********************************************************************
X3 ChangeLog

2011-06-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fixed a bug when reading services/nickserv/hard_maxlogins
	from x3.conf

2011-01-25  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fix for auto-oper bug where PRIVS were not
	being applied on Nefarious branch versions (or in short reverted
	revision 697:e6fe90cab8d0)

2010-12-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fixed bug where NickServ.oregister incorrectly
	logged the password.

2010-10-15  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fix for P10 BURST message parsing where
	extended bans were causing premature change from ban mask to
	except mask parsing.

2010-09-27  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Fix for maxsetinfo now allowing you to set it
	to the maximum value as specified in x3.conf

2010-09-24  Matthew Beeching  <jobe@mdbnet.co.uk>

        * src/proto-p10.c: Fix for crash bug during burst where X3 sends
        a B (BURST) message with a channel limit in the modes string.

2010-09-24  Alex Schumann <rubin@afternet.org>

	* src/chanserv.c: dont let users set extended bans with
	.ban/lamer/etc, and dont remove extended bans with bantimeout

2010-09-19  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Added ignore_csuspend to *ChanServ.csuspend
	and *ChanServ.cunsuspend as a default flag.

2010-09-17  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Updated ChanServ.staff, ChanServ.ircops and
	ChanServ.helpers to hide users with user mode +H (hide oper).

2010-09-08  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Replaced some horrible code for formatting a
	channel mode string and fix for a bug where chan mode +A was
	being ignored.

2010-08-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Changed wheel of misfortune nick change pseudo